@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-18T08:13:52Z",
+  "timestamp" : "2024-05-19T00:59:41Z",
   "count_outdated" : 1648,
   "uniques_outdated" : 904,
-  "count" : 1666,
+  "count" : 1667,
   "uniques" : 917,
   "clones" : [
     {
@@ -88,9 +88,9 @@
     },
     {
       "timestamp": "2024-05-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
