@@ -1,5 +1,5 @@
 {
-  "count": 18,
+  "count": 19,
   "uniques": 6,
   "clones": [
     {
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2024-05-18T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
